Change platform.conf to default to tracing

--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -25,7 +25,7 @@ fds: {
         logfile = "pltform"
 
         /* Log severity */
-        log_severity = "crit"
+        log_severity = "trace"
 
         /* Control path port */
         platform_port = 7000
@@ -81,7 +81,7 @@ fds: {
         logfile = "dm"
 
         /* Log severity */
-        log_severity = "crit"
+        log_severity = "trace"
 
 	cache: {
 	    /* Default max entries in a volume's DM catalog cache */
@@ -145,7 +145,7 @@ fds: {
         logfile="sm"
 
         /* Log severity */
-        log_severity = "crit"
+        log_severity = "trace"
 
         /* verify data */
         data_verify = true
@@ -237,7 +237,7 @@ fds: {
         perf: {
             enable=true
         }
-        log_severity = "crit"
+        log_severity = "trace"
         logfile      = "am"
         om_ip        = "127.0.0.1"
         om_port      = 8904
@@ -312,7 +312,7 @@ fds: {
     {
         id="om"
         prefix=""
-        log_severity = "crit"
+        log_severity = "trace"
         logfile="om"
         config_port=8903
         control_port=8904
@@ -341,7 +341,7 @@ fds: {
         id = "checker"
         path = "/home/bao_pham/temp/skinet2"
         logfile = "checker"
-        log_severity = "crit"
+        log_severity = "trace"
 
         /* Control path port */
         control_port = 6991
