WIN-1119: Flat file implementation to store OIDs for block volume.

--- a/source/data-mgr/dm-lib/dm-vol-cat/Makefile
+++ b/source/data-mgr/dm-lib/dm-vol-cat/Makefile
@@ -14,7 +14,9 @@ user_cpp          := \
 	DmPersistVc.cpp \
 	DmVolumeDirectory.cpp \
 	DmPersistVolDir.cpp \
-	DmPersistVolDB.cpp
+	DmPersistVolDB.cpp \
+	DmOIDArrayMmap.cpp \
+	DmPersistVolFile.cpp
 
 user_ar_libs      := fds-dm-lib
 fds-dm-lib        := $(user_cpp)
