TokenCompactor unit test and scavenger set/get policy and get progress.

--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -70,7 +70,8 @@ user_cpp          := \
         sm_token_place_gtest.cpp \
 	smapi_gtest.cpp \
 	smperf_gtest.cpp \
-        object_persist_data_gtest.cpp
+        object_persist_data_gtest.cpp \
+        sm_token_compactor_gtest.cpp
 
 user_no_style     :=
 
@@ -85,6 +86,7 @@ user_bin_exe      := \
     smperf_gtest \
     sm_superblock_gtest \
     obj_persist_gtest \
+    smtokcompactor_gtest
 
 ObjectStoreUnitTest := object_store_unit_test.cpp
 ObjectStoreLoadTest := object_store_load_test.cpp
@@ -96,5 +98,6 @@ sm_load_test        := sm_load_test.cpp
 smperf_gtest         := smperf_gtest.cpp ngx_modules.c
 sm_superblock_gtest := sm_superblock_gtest.cpp
 obj_persist_gtest   := object_persist_data_gtest.cpp
+smtokcompactor_gtest := sm_token_compactor_gtest.cpp
 
 include $(topdir)/Makefile.incl
