--- a/source/java/src/resources/fds-commons-model.properties
+++ b/source/java/src/resources/fds-commons-model.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2014, All Rights Reserved, by Formation Data Systems, Inc.
+# Copyright (c) 2014, Formation Data Systems, Inc. All Rights Reserved.
 #
 
 fdsp.platform.manager.displayable = Platform Manager
@@ -33,3 +33,6 @@ ical.missing.token = Missing expected token, last token: %s
 ical.parse.error = Bad formatted iCal element - %s
 ical.missing.freq = A recurrence rule MUST contain a FREQ rule part.
 ical.invalid.freq = Invalid FREQ rule part '{0}' in recurrence rule
+
+model.validation.out.range = Out of range value ( %d ) provided for '%s'; must between %d and %d.
+model.metrics.unsupported = Unsupported Metrics '%s'.
