--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -188,6 +188,12 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
       <version>2.5.1</version>
+      <exclusions>
+            <exclusion>
+                  <groupId>javax.servlet</groupId>
+                  <artifactId>servlet-api</artifactId>
+            </exclusion>
+      </exclusions>
     </dependency>
 
     <!-- Togglz Dependencies -->
