Scaffolding async banger

--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -35,7 +35,6 @@
             <artifactId>jedis</artifactId>
             <version>2.6.0</version>
         </dependency>
-
         <dependency>
             <groupId>fds</groupId>
             <artifactId>fds-thrift</artifactId>
@@ -143,6 +142,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore-nio</artifactId>
             <version>4.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version>4.0.2</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
