intial work  standalone DM  test

--- a/source/unit-test/data-mgr/Makefile
+++ b/source/unit-test/data-mgr/Makefile
@@ -8,11 +8,26 @@ user_hh        := $(wildcard *.h)
 
 user_fds_so_libs  :=
 user_fds_ar_libs  := \
-    fds-lib \
+    fds-test \
+    fds-probe-ut \
+    fds-plat-daemon \
+    fds-probe \
+    fds-am-engine \
+    fds-am-plat \
+    fds-dsk-io \
+    fds-dsk-mgnt \
+    fds-plat-disk \
+    fds-hash \
+    fds-xdi \
+    fds-smlib     \
+    fds-vpolicy   \
+    fds-hash      \
+    fds-migrations \
+    fds-odb       \
+    fds-sm-plat   \
+    fds-smlib \
     fds-dm-plat \
     fds-dm-lib \
-    fds-dsk-mgnt \
-    fds-xdi
 
 user_non_fds_libs := \
     gmock \
@@ -20,6 +35,33 @@ user_non_fds_libs := \
     leveldb \
     crypto \
     cryptopp
+
+local_nginx_libs   :=  \
+    ngx-http-module \
+    ngx-http \
+    ngx-event-module \
+    ngx-event \
+    ngx-core \
+    ngx-os \
+    ngx-core
+
+user_non_fds_libs :=  \
+    jansson \
+        udev \
+        parted \
+    $(local_nginx_libs) \
+    config++    \
+    boost_timer \
+    leveldb \
+    ssl \
+    crypt \
+    pcre \
+    crypto \
+    z \
+    cryptopp \
+    leveldb \
+    gmock \
+    pthread
 
 user_incl_dir     := \
     $(topdir) \
@@ -29,11 +71,14 @@ user_incl_dir     := \
 
 user_cpp_flags    :=
 user_cpp          :=  \
-    dm_volume_catalog_gtest.cpp
+    dm_volume_catalog_gtest.cpp \
+    dm_mod_gtest.cpp
 
 user_bin_exe      := \
-    dm_volume_catalog_gtest
+    dm_volume_catalog_gtest \
+    dm_mod_gtest
 
 dm_volume_catalog_gtest     := dm_volume_catalog_gtest.cpp
+dm_mod_gtest                := dm_mod_gtest.cpp ngx_modules.c
 
 include $(topdir)/Makefile.incl
