--- a/source/unit-test/data-mgr/Makefile
+++ b/source/unit-test/data-mgr/Makefile
@@ -75,9 +75,10 @@ user_cpp          :=  \
     dm_mod_gtest.cpp
 
 user_bin_exe      :=  \
-    dm_volume_catalog_gtest
+    dm_volume_catalog_gtest \
+    dm_mod_gtest
 
 dm_volume_catalog_gtest     := dm_volume_catalog_gtest.cpp
-dm_mod_gtest                := dm_mod_gtest.cpp
+dm_mod_gtest                := dm_mod_gtest.cpp ngx_modules.c
 
 include $(topdir)/Makefile.incl
