--- a/source/unit-test/fds-probe/am/Makefile
+++ b/source/unit-test/fds-probe/am/Makefile
@@ -1,12 +1,15 @@
 probe_topdir      := ..
-user_incl_dir     :=
+source_dir        := $(probe_topdir)/../..
+user_incl_dir     := \
+    $(source_dir)/access-mgr/stor-hvisor \
+    $(source_dir)/access-mgr/include
 
 user_json         := in.json
 user_cpp_flags    :=
 user_fds_so_libs  :=
 user_fds_ar_libs  := 
 user_non_fds_libs := \
-	ev
+    ev
 
 # Don't do style check on auto gen code.
 user_hh           := $(wildcard *.h)
