Provide Makefile templates: Makefile.svc : stand-alone, embedded platform unit test app. Makefile.dm : DM's unit test apps. Makefile.sm : SM's unit test apps. Attempt to ease the pain of writting unit tests and link with needed libraries.

--- a/source/unit-test/data-mgr/Makefile
+++ b/source/unit-test/data-mgr/Makefile
@@ -1,84 +1,18 @@
-topdir            := ../..
-user_target       := test
-user_std_libs     := true
-user_rtime_env    := user
-user_install_loc  := test
+test_topdir       := ..
+user_build_dir    := svc-test
+user_incl_dir     :=
 
-user_hh        := $(wildcard *.h)
-
+user_hh           := $(wildcard *.h)
 user_fds_so_libs  :=
-user_fds_ar_libs  := \
-    fds-test \
-    fds-probe-ut \
-    fds-plat-daemon \
-    fds-probe \
-    fds-am-engine \
-    fds-am-plat \
-    fds-dsk-io \
-    fds-dsk-mgnt \
-    fds-plat-disk \
-    fds-hash \
-    fds-xdi \
-    fds-smlib     \
-    fds-vpolicy   \
-    fds-hash      \
-    fds-migrations \
-    fds-odb       \
-    fds-sm-plat   \
-    fds-smlib \
-    fds-dm-plat \
-    fds-dm-lib \
-
-user_non_fds_libs := \
-    gmock \
-    pthread \
-    leveldb \
-    crypto \
-    cryptopp
-
-local_nginx_libs   :=  \
-    ngx-http-module \
-    ngx-http \
-    ngx-event-module \
-    ngx-event \
-    ngx-core \
-    ngx-os \
-    ngx-core
-
-user_non_fds_libs :=  \
-    jansson \
-        udev \
-        parted \
-    $(local_nginx_libs) \
-    config++    \
-    boost_timer \
-    leveldb \
-    ssl \
-    crypt \
-    pcre \
-    crypto \
-    z \
-    cryptopp \
-    leveldb \
-    gmock \
-    pthread
-
-user_incl_dir     := \
-    $(topdir) \
-    $(topdir)/lib \
-    $(topdir)/util \
-    $(topdir)/data-mgr/include
-
+user_fds_ar_libs  :=
+user_non_fds_libs :=
 user_cpp_flags    :=
 user_cpp          :=  \
-    dm_volume_catalog_gtest.cpp \
-    dm_mod_gtest.cpp
+    dm_volume_catalog_gtest.cpp
 
 user_bin_exe      := \
-    dm_volume_catalog_gtest \
-    dm_mod_gtest
+    dm_volume_catalog_gtest
 
 dm_volume_catalog_gtest     := dm_volume_catalog_gtest.cpp
-dm_mod_gtest                := dm_mod_gtest.cpp ngx_modules.c
 
-include $(topdir)/Makefile.incl
+include $(test_topdir)/Makefile.dm
