--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -71,7 +71,8 @@ user_cpp          := \
 	smapi_gtest.cpp \
 	smperf_gtest.cpp \
         object_persist_data_gtest.cpp \
-        sm_token_compactor_gtest.cpp
+        sm_token_compactor_gtest.cpp \
+        sm_token_state_gtest.cpp
 
 user_no_style     :=
 
@@ -86,7 +87,8 @@ user_bin_exe      := \
     smperf_gtest \
     sm_superblock_gtest \
     obj_persist_gtest \
-    smtokcompactor_gtest
+    smtokcompactor_gtest \
+    smtoken_state_gtest
 
 ObjectStoreUnitTest := object_store_unit_test.cpp
 ObjectStoreLoadTest := object_store_load_test.cpp
@@ -99,5 +101,6 @@ smperf_gtest         := smperf_gtest.cpp ngx_modules.c
 sm_superblock_gtest := sm_superblock_gtest.cpp
 obj_persist_gtest   := object_persist_data_gtest.cpp
 smtokcompactor_gtest := sm_token_compactor_gtest.cpp
+smtoken_state_gtest  := sm_token_state_gtest.cpp
 
 include $(topdir)/Makefile.incl
