re-added coke repo and fds-* packages. added force=yes to apt command

--- a/ansible/devsetup/devsetup.yml
+++ b/ansible/devsetup/devsetup.yml
@@ -11,14 +11,14 @@
     - name: add redis-server ppa
       apt_repository: repo=ppa:chris-lea/redis-server state=present
 
-#    - name: add fds repo
-#      apt_repository: repo='deb http://coke.formationds.com:8000 fds test' state=present
+    - name: add fds repo
+      apt_repository: repo='deb http://coke.formationds.com:8000 fds test' state=present
 
     - name: automatically select the oracle license
       shell: echo debconf shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections
 
     - name: install os packages
-      apt: name={{item}} state=present update_cache=yes cache_valid_time=600
+      apt: name={{item}} force=yes state=present update_cache=yes cache_valid_time=600
       with_items:
         - git
         - linux-generic
@@ -70,11 +70,11 @@
         - python-boto
         - python-argh
         - python-thrift
-#        - fds-pkghelper
-#        - fds-pkg
-#        - fds-pkgtools
-#        - fds-systemdir
-#        - fds-coredump
+        - fds-pkghelper
+        - fds-pkg
+        - fds-pkgtools
+        - fds-systemdir
+        - fds-coredump
 
     - name: install pip packages
       pip: name={{item}} state=present 
