fix playbook paths due to ansible reorg

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -85,4 +85,4 @@
         - xmlrunner
 
     - name: create java home script
-      copy: src=files/jdk.sh dest=/etc/profile.d/jdk.sh owner=root group=root mode=0755
+      copy: src=../files/jdk.sh dest=/etc/profile.d/jdk.sh owner=root group=root mode=0755
