initial attempt at getting makefile setup correctly, committing to save progress so far...
invoked the almighty bash to work around 'can't run devsetup in a parallel make invocation' issue

removing devsetup-ansible from 'all' target for now until communication and testing is complete

added a couple of packages that were missing to devsetup.yml

added sleep to wait for devsetup to complete so that parallel builds won't fail on the first run

fixed path issues, staged all the things for the swap to ansible for devsetup (haven't made the actual switch yet, pending communication to engineering)

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -59,6 +59,8 @@
         - libical-dev
         - libical1
         - libleveldb-dev
+        - google-perftools
+        - libgoogle-perftools-dev
         - libconfig++-dev
         - oracle-java8-installer
         - npm
