Add NBD block connector to production AM. Change Makefile to support explicit static library link. Solve name space problem when both libevt and libev have same symbols. We do static link with libev.

--- a/source/access-mgr/Makefile
+++ b/source/access-mgr/Makefile
@@ -58,6 +58,9 @@ user_non_fds_libs :=  \
     fiu \
     dl
 
+user_static_libs  := \
+    ev
+
 user_cc           :=
 
 user_incl_dir     += $(topdir) \
