--- a/source/config/etc/platform.conf
+++ b/source/config/etc/platform.conf
@@ -264,6 +264,8 @@ fds: {
 
 	/* Internal testing related info */
 	testing: {
+            /* Toggle stand alone mode */
+            toggleStandAlone = false
             /* Toggle old or new processing path */
 	    toggleNewPath = true
 	    /* Forces all AM dispatcher APIs to immediately return success */
