--- a/source/config/etc/fds-features.conf
+++ b/source/config/etc/fds-features.conf
@@ -7,3 +7,6 @@ SNAPSHOT_ENDPOINT = true
 
 # The feature 'STATISTICS_ENDPOINT' is enabled.
 STATISTICS_ENDPOINT = true
+
+# The feature 'FIREBREAK' is enabled.
+FIREBREAK = true
