--- a/source/unit-test/data-mgr/Makefile
+++ b/source/unit-test/data-mgr/Makefile
@@ -9,9 +9,10 @@ user_non_fds_libs :=
 user_cpp_flags    :=
 user_cpp          :=  $(wildcard *.cpp)
 
-user_bin_exe      := \
+user_bin_exe      := dm_direct \
     dm_volume_catalog_gtest
 
 dm_volume_catalog_gtest     := dm_volume_catalog_gtest.cpp
+dm_direct := dm_direct.cpp
 
 include $(test_topdir)/Makefile.dm
