Allow the number of parallel build threads to be easily changeable.
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/jansson-2.5/Makefile.fds
+++ b/jansson-2.5/Makefile.fds
@@ -1,5 +1,6 @@
 topdir         := ..
-speedup        := -j 5
+include $(topdir)/Makefile.cpus
+speedup        := -j $(parallel_build_count)
 user_build_dir := src test/bin
 
 include $(topdir)/Makefile.incl
