--- a/source/lib/Makefile
+++ b/source/lib/Makefile
@@ -1,5 +1,6 @@
 topdir           := ..
-speedup          := -j 5
+include $(topdir)/Makefile.cpus
+speedup          := -j $(parallel_build_count)
 user_build_dir   := blob net concurrency kvstore crypto native misc leveldb
 
 include $(topdir)/Makefile.incl
