--- a/source/stor-mgr/Makefile
+++ b/source/stor-mgr/Makefile
@@ -1,8 +1,9 @@
 topdir            := ..
+include $(topdir)/Makefile.cpus
 user_target       := exe
 user_std_libs     := true
 user_rtime_env    := user
-speedup           := -j 5
+speedup           := -j $(parallel_build_count)
 user_build_dir    := smlib policy include migrations platform
 
 # TODO: avoid include across components, put in include dir instead.
