--- a/source/fds-probe/Makefile
+++ b/source/fds-probe/Makefile
@@ -1,5 +1,6 @@
 topdir         := ..
-speedup        := -j 5
+include $(topdir)/Makefile.cpus
+speedup        := -j $(parallel_build_count)
 user_build_dir := common adapters block dataset s3 include
 
 include $(topdir)/Makefile.incl
