--- a/source/net-service/Makefile
+++ b/source/net-service/Makefile
@@ -1,7 +1,8 @@
 topdir           := ..
+include $(topdir)/Makefile.cpus
 user_target      := lib
 user_rtime_env   := user
-speedup          := -j 5
+speedup          := -j $(parallel_build_count)
 user_build_dir   := include endpoint svc_request
 user_incl_dir    :=
 
