--- a/source/persistent-layer/Makefile
+++ b/source/persistent-layer/Makefile
@@ -1,5 +1,6 @@
 topdir         := ..
-speedup        := -j 5
+include $(topdir)/Makefile.cpus
+speedup        := -j $(parallel_build_count)
 user_build_dir := io-lib mgnt-lib
 
 include $(topdir)/Makefile.incl
