--- a/thrift-0.9.0/Makefile.fds
+++ b/thrift-0.9.0/Makefile.fds
@@ -1,5 +1,6 @@
 topdir         := ..
-speedup        := -j 5
+include $(topdir)/Makefile.cpus
+speedup        := -j $(parallel_build_count)
 user_build_dir := compiler/cpp/src lib/cpp/src/thrift
 
 include $(topdir)/Makefile.incl
