Integrate NBD block driver to AM's volume attach path. Connect NBD block driver to DM's meta-data path.

--- a/source/Makefile.incl
+++ b/source/Makefile.incl
@@ -26,6 +26,8 @@ ifdef user_std_libs
         hiredis \
         fiu \
         dl
+
+	user_static_libs := ev
 endif
 
 incl_scripts := $(M)$(topdir)/Build/mk-scripts
