--- a/source/access-mgr/block/Makefile
+++ b/source/access-mgr/block/Makefile
@@ -3,7 +3,9 @@ user_target       := lib
 user_rtime_env    := user
 user_build_dir    :=
 user_incl_dir     := \
-    ../include
+    ../include \
+    ../stor-hvisor \
+	$(topdir)
 
 user_cpp_flags    :=
 user_cpp          := $(wildcard *.cpp)
